force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/echosign_dev1__Chatter_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Adobe Sign Chatter Settings</label>
</CustomObject>