force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Expired_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Expired_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Chatter update when agreement expires.</description>
    <inlineHelpText>Post Chatter update when agreement expires.</inlineHelpText>
    <label>Post when Agreement Expires</label>
    <type>Checkbox</type>
</CustomField>