force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Reminder_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Reminder_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Chatter update when reminders are sent.</description>
    <inlineHelpText>Post Chatter update when reminders are sent.</inlineHelpText>
    <label>Post when Reminders Sent</label>
    <type>Checkbox</type>
</CustomField>