force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Sign_Message__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Sign_Message__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Post private Chatter message to signer when an agreement needs the signer&apos;s signature.</description>
    <inlineHelpText>Post private Chatter message to signer when an agreement needs the signer&apos;s signature.</inlineHelpText>
    <label>Send Notifications to Sign Agreements</label>
    <type>Checkbox</type>
</CustomField>