force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Enable_Chatter_Integration__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Chatter_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to turn on Chatter updates for Adobe Acrobat Sign agreements.</description>
    <inlineHelpText>Enable this setting to turn on Chatter updates for Adobe Acrobat Sign agreements.</inlineHelpText>
    <label>Enable Acrobat Sign Chatter Updates</label>
    <type>Checkbox</type>
</CustomField>