force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Opportunity_Record_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Opportunity_Record_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Chatter updates for Adobe Acrobat Sign agreements on the related Opportunity record.</description>
    <inlineHelpText>Post Chatter updates for Adobe Acrobat Sign agreements on the related Opportunity record.</inlineHelpText>
    <label>Post on Opportunity Record</label>
    <type>Checkbox</type>
</CustomField>