force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Recipient_Email_Bounced_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Email_Bounced_Post__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Post Chatter update when recipient email bounces and is not delivered.</description>
    <inlineHelpText>Post Chatter update when recipient email bounces and is not delivered.</inlineHelpText>
    <label>Post when Recipient Email Bounces</label>
    <type>Checkbox</type>
</CustomField>